Update bio text and improve XML feed formatting

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@ layout: default
     </div>
     
     <div class="bio-text">
-      <p>Hey, I'm Parth Batra. I'm a data scientist by day and a music critic by passion. I grew up in <a href="https://en.wikipedia.org/wiki/Rewari" target="_blank">Rewari</a>—a small town near Delhi-NCR—and I've been navigating the world of data science for about ~3.5 years now.</p>
+      <p>Hey, I'm Parth Batra. I'm a data scientist by profession, but a music critic by passion. I grew up in <a href="https://en.wikipedia.org/wiki/Rewari" target="_blank">Rewari</a>—a small town near Delhi-NCR—and I've been navigating the world of data science for about ~3.5 years now.</p>
       <p>I kicked things off with internships at <a href="https://www.genpact.com" target="_blank">Genpact</a> (as an AI Engineer) and <a href="https://brightchamps.com/" target="_blank">Brightchamps</a> (as a Software Engineer), and now I'm happily crunching numbers and building cool stuff as a Data Scientist at <a href="https://www.procol.io/" target="_blank"><strong>Procol</strong></a> (check <a href="https://www.procol.ai" target="_blank">procol.ai</a>).</p>
 
       <p>I like to think of myself as a <strong>Full Stack Data Scientist</strong> because I've done a bit of everything:</p>
       <ul>
-        <li>Deployed data pipelines on my own</li>
+        <li>Deployed multiple data pipelines</li>
         <li>Trained and deployed ML models</li>
         <li>Created some pretty neat LLM agents</li>
-        <li>Wrote SQL queries that sometimes stretch up to 600 lines</li>
+        <li>Wrote SQL queries that sometimes stretch up to 600-700 lines</li>
         <li>Developed new microservices from scratch with CI/CD pipelines</li>
         <li>Built dashboards for core business metrics for smarter, data-driven decisions</li>
       </ul>
