Add social media links and personal description to Jekyll configuration; create custom styles for profile and bio sections

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ layout: default
 
 <div class="home-content">
   <div class="bio-container">
-    <div class="profile-image" style="float: right; width: 250px; margin: 0 0 1rem 2rem;">
-      <img src="/assets/images/profile.jpg" alt="Profile photo" style="width: 100%; border-radius: 8px;">
+    <div class="profile-image" style="float: right; width: 200px; margin: 0 0 1rem 2rem; border: 1px solid #ddd; padding: 5px; border-radius: 50%;">
+      <img src="/assets/images/profile.jpg" alt="Profile photo" style="width: 100%; border-radius: 50%; aspect-ratio: 1;">
     </div>
     
     <div class="bio-text">
@@ -13,7 +13,7 @@ layout: default
       <p>I kicked things off with internships at <a href="https://www.genpact.com" target="_blank">Genpact</a> (as an AI Engineer) and <a href="https://brightchamps.com/" target="_blank">Brightchamps</a> (as a Software Engineer), and now I'm happily crunching numbers and building cool stuff as a Data Scientist at <a href="https://www.procol.io/" target="_blank"><strong>Procol</strong></a> (check <a href="https://www.procol.ai" target="_blank">procol.ai</a>).</p>
 
       <p>I like to think of myself as a <strong>Full Stack Data Scientist</strong> because I've done a bit of everything:</p>
-      <ul>
+      <ul style="list-style-type: disc; margin-left: 20px;">
         <li>Deployed multiple data pipelines</li>
         <li>Trained and deployed ML models</li>
         <li>Created some pretty neat LLM agents</li>
@@ -30,12 +30,14 @@ layout: default
     </div>
   </div>
 
-  <div class="social-links" style="clear: both;">
+  <div class="social-links" style="clear: both; margin-top: 1rem;">
     <p>
-      Connect with me on 
-      <a href="https://github.com/parthbatra99" target="_blank">GitHub</a>,
-      <a href="https://x.com/batra99" target="_blank">Twitter</a>, or
-      <a href="https://www.linkedin.com/in/parth-batra99/" target="_blank">LinkedIn</a>
+      <span class="connect-text">Connect with me on</span>
+      <a href="https://github.com/parthbatra99" target="_blank" class="social-link">GitHub</a>
+      <span class="separator">•</span>
+      <a href="https://x.com/batra99" target="_blank" class="social-link">Twitter</a>
+      <span class="separator">•</span>
+      <a href="https://www.linkedin.com/in/parth-batra99/" target="_blank" class="social-link">LinkedIn</a>
     </p>
   </div>
 </div>
