Update feed links to use GitHub Pages URL; adjust profile image size and enhance personal bio formatting

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@ layout: default
     </div>
     
     <div class="bio-text">
-      <p>Hey, I'm <strong>Parth Batra</strong>. <strong>Data scientist</strong> by day, <em>music critic</em> by night. I grew up in <a href="https://en.wikipedia.org/wiki/Rewari" target="_blank">Rewari</a>—a small town near Delhi-NCR—and I've been tearing through the <em>data science jungle</em> for about <strong>~3.5 years</strong> now.</p>
+      <p>Hey, I'm <strong>Parth Batra</strong>.</p>
+      <p><strong>Data scientist</strong> by day, <em>music critic</em> by night.</p>
+      <p>I grew up in <a href="https://en.wikipedia.org/wiki/Rewari" target="_blank">Rewari</a>—a small town near Delhi-NCR—and I've been tearing through the <em>data science jungle</em> for about <strong>~3.5 years</strong> now.</p>
 
       <p>My journey started with gigs at <a href="https://www.genpact.com" target="_blank"><strong>Genpact</strong></a> (<em>AI Engineer</em>) and <a href="https://brightchamps.com/" target="_blank"><strong>Brightchamps</strong></a> (<em>Software Engineer</em>), and now I'm crafting data magic as a Data Scientist at <a href="https://www.procol.io/" target="_blank"><strong>Procol</strong></a> (<a href="https://www.procol.ai" target="_blank">procol.ai</a>, if you're curious).</p>
 
