Update feed and index with new blog post details; enhance quick-wits layout and styling for better readability

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ layout: default
       <p><strong>Data scientist</strong> by day, <em>music critic</em> by night.</p>
       <p>I grew up in <a href="https://en.wikipedia.org/wiki/Rewari" target="_blank">Rewari</a>—a small town near Delhi-NCR—and I've been tearing through the <em>data science jungle</em> for about <strong>four years</strong> now.</p>
 
-      <p>Right now, I'm a Data Scientist at <a href="https://www.procol.io/" target="_blank"><strong>Procol</strong></a> (mostly, <a href="https://www.procol.ai" target="_blank">procol.ai</a>), wrangling data and building solutions. Before this, my journey included AI engineering at <a href="https://www.genpact.com" target="_blank"><strong>Genpact</strong></a> and software engineering at <a href="https://brightchamps.com/" target="_blank"><strong>Brightchamps</strong></a> and <a href="https://www.getmunch.com/" target="_blank"><strong>Munch</strong></a>.</p>
+      <p>Right now, I'm a Data Scientist at <a href="https://www.procol.io/" target="_blank"><strong>Procol</strong></a> (mostly, <a href="https://www.procol.ai" target="_blank">procol.ai</a>), wrangling data and building solutions. Before this, my journey included summer internship at <a href="https://www.marutisuzuki.com/" target="_blank"><strong>Maruti Suzuki</strong></a> , AI engineering at <a href="https://www.genpact.com" target="_blank"><strong>Genpact</strong></a> and software engineering at <a href="https://brightchamps.com/" target="_blank"><strong>Brightchamps</strong></a> and <a href="https://www.getmunch.com/" target="_blank"><strong>Munch</strong></a>.</p>
 
       <p>I rock the <strong>Full Stack Data Scientist</strong> title because I've conquered it all:</p>
       <ul style="list-style-type: disc; margin-left: 20px;">
